Bug 231389 - Textarea scrolls to top after changing its .value, regardless of cursor position; r=roc